# compasce

./: .envrc  .gitignore  README.md  Untitled.ipynb  common.smk  example.ipynb  hubmap.ipynb  mudata.ipynb  pyproject.toml  scrnaseq.smk  scrnaseq_heart.smk
.github/workflows/: test.yml
scripts/: download_data.sh  merge_metadata.py  run_comparisons.py  run_comparisons_heart.py  subset_h5ad.py
src/comparisce/: __init__.py  _o2.py  cli.py  densmap.py  diffexp.py  normalization.py  pipeline.py
src/comparisce/io/: __init__.py  cdata.py  lazy_anndata.py  zarr_io.py
src/compasce/: __init__.py  constants.py  dask.py  densmap.py  diffabundance.py  diffexp.py  hvg.py  lemur.py  normalization.py  pipeline.py  pipeline_cli.py
src/compasce/io/: __init__.py  cdata.py  comparison_metadata.py  lazy_anndata.py  zarr_io.py
tests/: fixtures.py  test_io.py  test_mem.py  test_parallel.py  test_pipeline.py
