[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compasce"
version = "0.0.1"
authors = [
  { name="Mark Keller", email="mark_keller@hms.harvard.edu" },
]
description = "Preprocessing functions that support comparison of single-cell data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["single-cell"]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Science/Research',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
dependencies = [
  'pandas',
  'numpy<=2.0.0',
  'scanpy @ git+https://github.com/keller-mark/scanpy@keller-mark/densmap-2-and-zarr-2',
  'anndata>=0.9.0,<0.11',
  'scipy',
  'dask[distributed]',
  'dask-ml',
  'distributed',
  'joblib',
  'scikit-learn>=1.5.1',
  'zarr',
  'gprofiler-official',
  'pylemur @ git+https://github.com/keller-mark/pyLemur@keller-mark/more-dask-and-merge',
]

[project.optional-dependencies]
dev = [
  'build==0.1.0',
  'pytest>=6.2.4',
  'pytest-memray',
  'flake8==3.8.4',
  'jupyterlab',
  #'snakemake',
  'pertpy',
  'requests',
  'altair',
]

[project.urls]
repository = "https://github.com/keller-mark/compasce"

[project.scripts]
compasce = "compasce.cli:run_cli"

# Reference: https://stackoverflow.com/a/74421415
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Reference: https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.hatch.metadata]
allow-direct-references = true

